unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__TotalDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TotalDiscountAmount__c</fullName>
    <description>Total discount amount for this line item including volume discount, contracted discount, and additional discount.</description>
    <formula>IF(SBQQ__Bundled__c, 0,
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &#39;Slab&#39;) &amp;&amp; NOT(SBQQ__Existing__c), (SBQQ__ProratedListPrice__c * SBQQ__Quantity__c - SBQQ__CustomerPrice__c),
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &#39;Slab&#39;) &amp;&amp; SBQQ__Existing__c, (SBQQ__ProratedListPrice__c * (SBQQ__Quantity__c-SBQQ__PriorQuantity__c) - SBQQ__CustomerPrice__c),
(SBQQ__ProratedListPrice__c -  SBQQ__CustomerPrice__c) * SBQQ__EffectiveQuantity__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Montant de remise total pour cet élément de ligne comprenant une remise sur volume, une remise contractée et une remise supplémentaire.</inlineHelpText>
    <label>Total Discount (Amt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>