unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__UpgradedAsset__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpgradedAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset being upgraded by this quote line. Only populated if this quote line represents an upgrade.</description>
    <inlineHelpText>Actif mis à niveau par cette ligne de devis. Lorsque le devis est contracté, la Date de fin d&#39;utilisation de cet actif est complétée pour indiquer sa date de retrait.</inlineHelpText>
    <label>Upgraded Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Quote Lines (Upgrade)</relationshipLabel>
    <relationshipName>UpgradeLines</relationshipName>
    <type>Lookup</type>
</CustomField>