unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__UpgradedQuantity__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpgradedQuantity__c</fullName>
    <description>Quantity being upgraded.</description>
    <inlineHelpText>Partie de la Quantité précédente de cette ligne actuellement mise à niveau vers un autre produit.</inlineHelpText>
    <label>Upgraded Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>