unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__UpgradedSubscription__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpgradedSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subscription being upgraded by this quote line.</description>
    <inlineHelpText>Abonnement mis à niveau par cette ligne de devis. Lorsque le devis est contracté, la Date de résiliation de cet abonnement est complétée.</inlineHelpText>
    <label>Upgraded Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Quote Lines (Upgrade)</relationshipLabel>
    <relationshipName>UpgradeLines</relationshipName>
    <type>Lookup</type>
</CustomField>