unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__Uplift__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Uplift__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Uplift is applied as a % against the previous year&#39;s price; the resulting price is entered into the Regular Price field on top of Special or Contracted Prices. Uplifts compound year after year. Uplift cannot be applied to the 1st Year of any Subscription.</description>
    <inlineHelpText>L&#39;augm. s&#39;applique en tant que % du prix de l&#39;année préc. Le prix qui en résulte est saisi dans le champ Prix normal en plus des prix spéc. ou contractés. Les augm. s&#39;ajoutent année après année. Une augm. ne peut pas s&#39;appliquer à la 1e année d&#39;un abon.</inlineHelpText>
    <label>Uplift</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>