unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__UpliftAmount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpliftAmount__c</fullName>
    <description>Uplift (Amt) is measured as a currency amount. This is a system-calculated field, as Uplift can only be applied to MDQ segments in percent.</description>
    <inlineHelpText>L&#39;augmentation (montant) est mesurée en tant que montant en devise. Ce champ est calculé par le système, car l&#39;augmentation peut être appliquée uniquement à des segments MDQ en pourcentage.</inlineHelpText>
    <label>Uplift (Amt)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>