unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__VolumeDiscount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__VolumeDiscount__c</fullName>
    <description>Discount schedules allow you to specify volume discounts based on a percentage of the product&#39;s price to be discounted using the quantity purchased or term. You can set the quantity or term ranges in tiers of different discount percentages. You can also apply discount schedules to Subscription Term.</description>
    <inlineHelpText>Spécifiez les remises sur volume en % du prix du prod. à déduire en utilisant la quant. ou durée achetée. Vous pouvez définir les plages de quant. ou durée sur des niv. avec différents % de remise, ou appliquer des barèmes de remise à la durée de l&#39;abon.</inlineHelpText>
    <label>Volume Discount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>