unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Shipping_Area__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Area__c</fullName>
    <description>IF(AND(SBQQ__Quote__r.Specific_Transportation__c = True,OR(
LEFT(QL_CP_Tech__c,2) = &quot;75&quot;,
LEFT(QL_CP_Tech__c,2) = &quot;77&quot;,
LEFT(QL_CP_Tech__c,2) = &quot;78&quot;,
LEFT(QL_CP_Tech__c,2) = &quot;91&quot;,
LEFT(QL_CP_Tech__c,2) = &quot;92&quot;,
LEFT(QL_CP_Tech__c,2) = &quot;93&quot;,
LEFT(QL_CP_Tech__c,2) = &quot;94&quot;,
LEFT(QL_CP_Tech__c,2) = &quot;95&quot;)),&quot;IDF&quot;,
IF(OR(
LEFT(QL_CP_Tech__c,2) = &quot;59&quot;,
LEFT(QL_CP_Tech__c,2) = &quot;27&quot;,
LEFT(QL_CP_Tech__c,2) = &quot;76&quot;),&quot;Région Nord / Normandie&quot;,
IF(LEFT(QL_CP_Tech__c,2) = &quot;31&quot;,&quot;Région Centre / Aquitaine / Midi Pyrénées&quot;,
IF(LEFT(QL_CP_Tech__c,2) = &quot;21&quot;,&quot;Région Est&quot;,
IF(LEFT(QL_CP_Tech__c,2)=&quot;69&quot;,&quot;Région Rhônes Alpes&quot;,
IF(LEFT(QL_CP_Tech__c,2)=&quot;20&quot;,&quot;Corse&quot;,&quot;France&quot;))))))</description>
    <formula>IF
(
AND(SBQQ__Quote__r.Specific_Transportation__c = True,NOT(ISBLANK(Tech_Region_QL__c))),
Tech_Region_QL__c,
IF
(
OR(
LEFT(QL_CP_Tech__c ,2) = &quot;75&quot;,
LEFT(QL_CP_Tech__c ,2) = &quot;77&quot;,
LEFT(QL_CP_Tech__c ,2) = &quot;78&quot;,
LEFT(QL_CP_Tech__c ,2) = &quot;91&quot;,
LEFT(QL_CP_Tech__c ,2) = &quot;92&quot;,
LEFT(QL_CP_Tech__c ,2) = &quot;93&quot;,
LEFT(QL_CP_Tech__c ,2) = &quot;94&quot;,
LEFT(QL_CP_Tech__c ,2) = &quot;95&quot;
)
,
&quot;IDF&quot;
,
IF
(
LEFT(QL_CP_Tech__c ,2) = &quot;20&quot;
,
&quot;Corse&quot;
,
&quot;France&quot;)

)
)</formula>
    <label>Shipping Area</label>
    <type>Text</type>
</CustomField>