unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Short_Term__c.field-meta.xml
<CustomField>
    <fullName>Short_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Short Term</label>
    <type>Checkbox</type>
</CustomField>