unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Short_term_Parent__c.field-meta.xml
<CustomField>
    <fullName>Short_term_Parent__c</fullName>
    <formula>SBQQ__RequiredBy__r.Short_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short term Parent ?</label>
    <type>Checkbox</type>
</CustomField>