unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Sousgamme__c.field-meta.xml
<CustomField>
    <fullName>Sousgamme__c</fullName>
    <label>Sous-gamme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Porte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>