unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Tech_PO_Price__c.field-meta.xml
<CustomField>
    <fullName>Tech_PO_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Prix à remonter</label>
    <type>Checkbox</type>
</CustomField>