unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Tech_Porte__c.field-meta.xml
<CustomField>
    <fullName>Tech_Porte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Porte</label>
    <type>Checkbox</type>
</CustomField>