unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature (C°)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Temperature</valueSetName>
    </valueSet>
</CustomField>