unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Special_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Special_Price__c</fullName>
    <formula>SBQQ__SpecialPrice__c * Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Special Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>