unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Type_de_location__c.field-meta.xml
<CustomField>
    <fullName>Type_de_location__c</fullName>
    <label>Type de location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_Location</valueSetName>
    </valueSet>
</CustomField>