unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Uplift_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible à l&#39;indexation</label>
    <type>Checkbox</type>
</CustomField>